<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/ic_action_feed"
        android:enabled="true"
        android:icon="@drawable/ic_feed"
        android:title="@string/opportunities"
        app:showAsAction="always" />

    <item
        android:id="@+id/ic_action_commits"
        android:enabled="true"
        android:icon="@drawable/ic_commitments"
        android:title="@string/my_commitments"
        app:showAsAction="always"/>

    <item
        android:id="@+id/ic_action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="always" />


</menu>