<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border">

    <TextView
        android:id="@+id/tvOppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="1dp"
        android:text="@string/opportunity_name"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/tvNpoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvOppName"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/organization_name"
        android:textStyle="italic"
        android:textSize="12dp"/>

    <TextView
        android:id="@+id/tvOppTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNpoName"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/time"
        android:textSize="12dp"/>

    <TextView
        android:id="@+id/tvOppAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvOppTime"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="1dp"
        android:text="@string/address"
        android:textSize="12dp"/>


    <TextView
        android:id="@+id/tvOppDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvOppAddress"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="15dp"
        android:text="@string/opportunity_description"
        android:textSize="15dp"/>

</RelativeLayout>