<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpportunitiesDetailFragment"
    android:layout_marginBottom="?android:attr/actionBarSize">

    <TextView
        android:id="@+id/tvOppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/opportunity_name"/>

    <TextView
        android:id="@+id/tvNpoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tvOppName"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/non_profit_name"
        android:textSize="12dp"/>

    <TextView
        android:id="@+id/tvOppTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNpoName"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/time"
        android:textSize="12dp"/>

    <TextView
        android:id="@+id/tvOppAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvOppTime"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="3dp"
        android:text="@string/address"
        android:textSize="12dp"/>

    <TextView
        android:id="@+id/tvOppDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvOppAddress"
        android:layout_alignParentStart="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="15dp"
        android:text="@string/opportunity_description"/>

</RelativeLayout>