<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NpoRegContActivity"
    android:background="@drawable/median">

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/non_profit_registration"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSignUp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="60dp"
        android:hint="@string/organization_phone_number"
        android:inputType="phone"
        android:textSize="15dp"
        style="@style/EditTextTheme"/>

    <EditText
        android:id="@+id/etLocationNPO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="35dp"
        android:layout_below="@id/etPhone"
        android:hint="@string/organization_address"
        android:focusable="false"
        android:clickable="true"
        android:inputType="none"
        style="@style/EditTextTheme"/>

    <EditText
        android:id="@+id/etNpoDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etLocationNPO"
        android:layout_centerInParent="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="35dp"
        android:hint="@string/non_profit_description"
        android:maxLines="5"
        style="@style/EditTextTheme"/>


    <Button
        android:id="@+id/btnRegister"
        android:background="@drawable/button_yellow_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:text="@string/register"
        android:textAllCaps="false" />

</RelativeLayout>