<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/median"
        tools:context=".RegistrationActivity">

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="center"
            android:text="@string/volunteer_registration" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSignUp"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            style="@style/EditTextTheme" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etName"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            style="@style/EditTextTheme"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etEmail"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/EditTextTheme"/>

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            style="@style/EditTextTheme"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_yellow_selector"
            android:layout_above="@id/tvLogin"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="5dp"
            android:text="Continue"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:textAlignment="center"
            android:text="@string/login"
            style="@style/SignUpText"/>

</RelativeLayout>