<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/median"
        tools:context=".VolRegActivity">

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/volunteer_registration"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="35dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:fontFamily="@font/royal_crescent_demo"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSignUp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="50dp"
            android:hint="@string/name"
            android:textSize="15dp"
            android:textColorHint="@color/white"
            android:shadowColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etName"
            android:layout_centerInParent="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="15dp"
            android:textColorHint="@color/white"
            android:shadowColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etEmail"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="30dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="15dp"
            android:textColorHint="@color/white"
            android:shadowColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="30dp"
            android:textSize="15dp"
            android:textColorHint="@color/white"
            android:shadowColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"/>


        <Button
            android:id="@+id/btnRegister"
            android:background="@drawable/round_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tvLogin"
            android:text="@string/register"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"/>


</RelativeLayout>