<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:layout_marginBottom="?android:attr/actionBarSize">

    <ImageButton
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_logout" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:layout_toRightOf="@id/profile_pic"
        android:layout_alignTop="@id/profile_pic"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/profile_pic"
        android:layout_below="@id/tv_name"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:textStyle="italic"
        android:text="@string/email" />

    <TextView
        android:id="@+id/tv_contact_info"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/profile_pic"
        android:layout_below="@id/tv_email"
        android:ems="10"
        android:textStyle="italic"
        android:text="@string/contact_information"/>


    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="129dp"
        android:layout_height="147dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="15dp"
        android:text=""
        android:src="@drawable/com_facebook_profile_picture_blank_portrait" />

    <TextView
        android:id="@+id/tv_skills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_pic"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/skills"/>

    <TextView
        android:id="@+id/tv_cause_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_skills"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/cause_areas" />
</RelativeLayout>

